# Hierarchical-Trace-Format

./: .clang-format  AUTHORS  CMakeLists.txt  LICENSE  Makefile  README.md  analyze_trace.c  cond.c  config.json  event.h  htf.pc.in  install_htf.sh  liblock.h  mutex.c  push_htf.sh  read_trace.c  trace.sh  trace_storage.c  trace_storage.h  write_events.c
.github/workflows/: cmake.yml  eztrace.yml
apps/: CMakeLists.txt  htf_info.cpp  htf_print.c  htf_print.cpp
cmake_modules/: FindSZ.cmake  FindSize.cmake  FindZFP.cmake  Findsz.cmake  Findzfp.cmake  Findzstd.cmake  PrintOpts.cmake
doc/pthread_tracer/: Makefile  trace.sh
docker/: Dockerfile_eztrace  build_docker_images.sh
libraries/htf/: CMakeLists.txt  Doxyfile.in
libraries/htf/include/htf/: LinkedVector.h  htf.h  htf_archive.h  htf_attribute.h  htf_config.h.in  htf_dbg.h  htf_hash.h  htf_linked_vector.h  htf_parameter_handler.h  htf_read.h  htf_storage.h  htf_timestamp.h  htf_write.h
libraries/htf/src/: LinkedVector.cpp  ParameterHandler.cpp  ParameterHandler.h  htf.cpp  htf_archive.cpp  htf_attribute.cpp  htf_dbg.cpp  htf_hash.cpp  htf_linked_vector.cpp  htf_parameter_handler.cpp  htf_read.cpp  htf_storage.cpp  htf_timestamp.c  htf_timestamp.cpp  htf_write.cpp
libraries/otf2/: CMakeLists.txt
libraries/otf2/include/otf2/: OTF2_Archive.h  OTF2_AttributeList.h  OTF2_AttributeValue.h  OTF2_Callbacks.h  OTF2_DefReader.h  OTF2_DefReaderCallbacks.h  OTF2_DefWriter.h  OTF2_Definitions.h  OTF2_ErrorCodes.h  OTF2_EventSizeEstimator.h  OTF2_EvtReader.h  OTF2_EvtReaderCallbacks.h  OTF2_EvtWriter.h  OTF2_GeneralDefinitions.h  OTF2_GlobalDefReader.h  OTF2_GlobalDefReaderCallbacks.h  OTF2_GlobalDefWriter.h  OTF2_GlobalEvtReaderCallbacks.h  OTF2_MPI_Collectives.h  OTF2_Marker.h  OTF2_MarkerReader.h  OTF2_MarkerWriter.h  OTF2_OpenMP_Locks.h  OTF2_Reader.h  OTF2_SnapReaderCallbacks.h  OTF2_SnapWriter.h  otf2.h
libraries/otf2/src/: OTF2_Archive.c  OTF2_AttributeList.c  OTF2_AttributeValue.c  OTF2_DefReader.c  OTF2_DefReaderCallbacks.c  OTF2_DefWriter.c  OTF2_ErrorCodes.c  OTF2_EventSizeEstimator.c  OTF2_EvtReader.c  OTF2_EvtReaderCallbacks.c  OTF2_EvtWriter.c  OTF2_GlobalDefReader.c  OTF2_GlobalDefReaderCallbacks.c  OTF2_GlobalDefWriter.c  OTF2_GlobalEvtReader.c  OTF2_GlobalEvtReaderCallbacks.c  OTF2_GlobalSnapReader.c  OTF2_GlobalSnapReaderCallbacks.c  OTF2_IdMap.c  OTF2_MarkerReader.c  OTF2_MarkerReaderCallbacks.c  OTF2_MarkerWriter.c  OTF2_Reader.c  OTF2_SnapReader.c  OTF2_SnapReaderCallbacks.c  OTF2_SnapWriter.c  OTF2_Thumbnail.c  otf2.c
src/: CMakeLists.txt  htf.c  htf.h  htf_archive.c  htf_archive.h  htf_attribute.c  htf_attribute.h  htf_dbg.c  htf_dbg.h  htf_dynamic_array.c  htf_dynamic_array.h  htf_event.c  htf_event.h  htf_hash.c  htf_hash.h  htf_murmur.c  htf_murmur.h  htf_read.c  htf_read.h  htf_storage.c  htf_storage.h  htf_timestamp.c  htf_timestamp.h  htf_vector.c  htf_vector.h  htf_write.c  htf_write.h  timestamp.c  timestamp.h  trace_storage.c  write_events.c
src/otf2/: CMakeLists.txt  OTF2_Archive.c  OTF2_Archive.h  OTF2_AttributeList.c  OTF2_AttributeList.h  OTF2_AttributeValue.c  OTF2_AttributeValue.h  OTF2_Callbacks.h  OTF2_DefReader.c  OTF2_DefReader.h  OTF2_DefReaderCallbacks.c  OTF2_DefReaderCallbacks.h  OTF2_DefWriter.c  OTF2_DefWriter.h  OTF2_Definitions.h  OTF2_ErrorCodes.c  OTF2_ErrorCodes.h  OTF2_EventSizeEstimator.c  OTF2_EventSizeEstimator.h  OTF2_Events.h  OTF2_EvtReader.c  OTF2_EvtReader.h  OTF2_EvtReaderCallbacks.c  OTF2_EvtReaderCallbacks.h  OTF2_EvtWriter.c  OTF2_EvtWriter.h  OTF2_GeneralDefinitions.h  OTF2_GlobalDefReader.c  OTF2_GlobalDefReaderCallbacks.c  OTF2_GlobalDefReaderCallbacks.h  OTF2_GlobalDefWriter.c  OTF2_GlobalDefWriter.h  OTF2_GlobalEvtReader.c  OTF2_GlobalEvtReader.h  OTF2_GlobalEvtReaderCallbacks.c  OTF2_GlobalEvtReaderCallbacks.h  OTF2_GlobalSnapReader.c  OTF2_GlobalSnapReader.h  OTF2_GlobalSnapReaderCallbacks.c  OTF2_GlobalSnapReaderCallbacks.h  (+32 more)
test/: CMakeLists.txt  find_loop.c  find_loop.cpp  sequence_durations.cpp  test_array.c  test_hash.c  test_hash.cpp  test_utils.sh  test_vector.c  test_vector.cpp  write_benchmark.c  write_benchmark.sh
test/mpi/: CMakeLists.txt  mpi_benchmark.c
tools/: CMakeLists.txt  htf_info.c  htf_print.c  read_trace.c
tracer/: CMakeLists.txt  cond.c  mutex.c  read_trace.c  trace.sh.in  tracer.c  tracer.h
